--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -185,7 +185,7 @@
         list.push("P1-Villa-46,@Vikas Mahala,@1000,@,@,@"); 
         list.push("P1-Villa-47,@Manoj Ji,@1000,@,@,@"); 
         list.push("P1-Villa-48,@R C Sharma ,@1000,@,@,@"); 
-        list.push("P1-Villa-49,@Sunita Verma,@Vacant,@,@,@"); 
+        list.push("P1-Villa-49,@Sunita Verma,@1000,@,@,@"); 
         list.push("P1-Villa-50,@Abhishek Garg,@1000,@,@,@"); 
         list.push("P1-Villa-51,@Jatin Kumar,@Vacant,@,@,@"); 
         list.push("P1-Villa-52,@Shailesh Bansal,@1000,@,@,@"); 
