--- a/MonthlyCreditDebit.html
+++ b/MonthlyCreditDebit.html
@@ -142,6 +142,7 @@
         list.push("Quarterly Collection ,Villa 65,42000,C");
         list.push("DJ Advance Booking,Villa 65,-1000,D");
         list.push("Chola Kulche Advance Booking,Villa 65,-1000,D");
+        list.push("Holi Color,Villa 65,-2000,D");
         
          generateTable(list)
          SetBalanceColor();
