--- a/MonthlyCreditDebit.html
+++ b/MonthlyCreditDebit.html
@@ -143,6 +143,7 @@
         list.push("DJ Advance Booking,Villa 65,-1000,D");
         list.push("Chola Kulche Advance Booking,Villa 65,-1000,D");
         list.push("Holi Color,Villa 65,-2000,D");
+        list.push("RWA Activity - Affidavit Charges,Villa 65,-130,D");
         
          generateTable(list)
          SetBalanceColor();
