--- a/MonthlyCreditDebit.html
+++ b/MonthlyCreditDebit.html
@@ -144,6 +144,9 @@
         list.push("Chola Kulche Advance Booking,Villa 65,-1000,D");
         list.push("Holi Color,Villa 65,-2000,D");
         list.push("RWA Activity Affidavit Charges,Villa 65,-130,D");
+        list.push("Holi Thandai,Villa 65,-1040,D");
+        list.push("Holi Thandai Milk,Villa 65,-1000,D");
+        list.push("Holi Dahan Lakadi Milk,Villa 65,-1220,D");
         
          generateTable(list)
          SetBalanceColor();
