--- a/MonthlyCreditDebit.html
+++ b/MonthlyCreditDebit.html
@@ -146,7 +146,7 @@
         list.push("RWA Activity Affidavit Charges,Villa 65,-130,D");
         list.push("Holi Thandai,Villa 65,-1040,D");
         list.push("Holi Thandai Milk,Villa 65,-1000,D");
-        list.push("Holi Dahan Lakadi Milk,Villa 65,-1220,D");
+        list.push("Holi Dahan Lakadi,Villa 65,-1220,D");
         
          generateTable(list)
          SetBalanceColor();
