--- a/MonthlyCreditDebit.html
+++ b/MonthlyCreditDebit.html
@@ -140,14 +140,22 @@
          // Sr. No,	Collection/Expenditure Details,	From,	Amount,	Credit/Debit
         list.push("Previous balance,Villa 65,2046,C");
         list.push("Quarterly Collection ,Villa 65,42000,C");
-        list.push("DJ Advance Booking,Villa 65,-1000,D");
-        list.push("Chola Kulche Advance Booking,Villa 65,-1000,D");
+        list.push("Holi DJ,Villa 65,-2500,D");
+        list.push("Chola Kulche MG,Villa 65,-500,D");
+        list.push("Gulab Jamun phase 1 distirbution,Villa 65,-1500,D");
         list.push("Holi Color,Villa 65,-2000,D");
         list.push("RWA Activity Affidavit Charges,Villa 65,-130,D");
         list.push("Holi Thandai,Villa 65,-1040,D");
         list.push("Holi Thandai Milk,Villa 65,-1000,D");
         list.push("Holi Dahan Lakadi,Villa 65,-1220,D");
+        list.push("Holi day evening disposal glass,Villa 65,-105,D");
+        list.push("Holi bhang 480 & Pandit ji Dakshina 520,Villa 65,-1000,D");
         
+        list.push("Himmat Ji,Phase 2,765,C");
+        list.push("Holi Thandai Disposal glass,Phase 2,-240,D");
+        list.push("Holi Thandai Sugar,Phase 2,-225,D");
+        list.push("Holi Dahan Prasad,Phase 2,-300,D");
+
          generateTable(list)
          SetBalanceColor();
         
