--- a/MonthlyCreditDebit.html
+++ b/MonthlyCreditDebit.html
@@ -150,6 +150,7 @@
         list.push("P1P2 Holi Dahan Lakadi,Villa 65,-1220,D");
         list.push("P1 Holi day evening disposal glass,Villa 65,-105,D");
         list.push("P1P2 Holi bhang 480 & Pandit ji Dakshina 520,Villa 65,-1000,D");
+        list.push("P1P2 Tent Chairs and Tables,Villa 65,-1300,D");
         
         list.push("P1P2 Himmat Ji,Phase 2,765,C");
         list.push("P1P2 Holi Thandai Disposal glass,Phase 2,-240,D");
