--- a/MonthlyCreditDebit.html
+++ b/MonthlyCreditDebit.html
@@ -140,15 +140,17 @@
          // Sr. No,	Collection/Expenditure Details,	From,	Amount,	Credit/Debit
         list.push("P1 Previous balance,Villa 65,2046,C");
         list.push("P1 Quarterly Collection ,Villa 65,42000,C");
-        list.push("P1P2 Holi DJ,Villa 65,-2500,D");
         list.push("P1 Chola Kulche MG,Villa 65,-500,D");
         list.push("P1 Gulab Jamun phase 1 distirbution,Villa 65,-1500,D");
-        list.push("P1P2 Holi Color,Villa 65,-2000,D");
+        list.push("P1 Light fitting saman,Villa 65,-126,D");
         list.push("P1 RWA Activity Affidavit Charges,Villa 65,-130,D");
+        list.push("P1 Holi day evening disposal glass,Villa 65,-105,D");
+
+        list.push("P1P2 Holi DJ,Villa 65,-2500,D");
+        list.push("P1P2 Holi Color,Villa 65,-2000,D");
         list.push("P1P2 Holi Thandai,Villa 65,-1040,D");
         list.push("P1P2 Holi Thandai Milk,Villa 65,-1000,D");
         list.push("P1P2 Holi Dahan Lakadi,Villa 65,-1220,D");
-        list.push("P1 Holi day evening disposal glass,Villa 65,-105,D");
         list.push("P1P2 Holi bhang 480 & Pandit ji Dakshina 520,Villa 65,-1000,D");
         list.push("P1P2 Tent Chairs and Tables,Villa 65,-1300,D");
         
