--- a/MonthlyCreditDebit.html
+++ b/MonthlyCreditDebit.html
@@ -158,7 +158,7 @@
         list.push("P1P2 Holi Thandai Disposal glass,Phase 2,-240,D");
         list.push("P1P2 Holi Thandai Sugar,Phase 2,-225,D");
         list.push("P1P2 Holi Dahan Prasad,Phase 2,-300,D");
-        list.push("P1P2 Phase 2 ,Phase 2,3565,C");
+        list.push("P1P2 Phase 2 Collection ,Phase 2,3565,C");
 
          generateTable(list)
          SetBalanceColor();
