--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -121,7 +121,7 @@
                 </div>
             </div>
             <div class="footer_bottom">
-                <p>Copyright@2022-23 <a href="#">Shubh Villa Phase I Owners</a> All Rights Reserved</p>
+                <p>Copyright@2023-24 <a href="#">Shubh Villa Phase I Owners</a> All Rights Reserved</p>
             </div>
         </footer>
     </div>
@@ -173,7 +173,7 @@
         list.push("P1-Villa-34,@Vijay Meena,@1000,@,@,@"); 
         list.push("P1-Villa-35,@D V Saraswat & Kusum Saraswat,@Vacant,@,@,@"); 
         list.push("P1-Villa-36,@Harish Kumar Yadav,@Vacant,@,@,@"); 
-        list.push("P1-Villa-37,@Gajendra Sharma,@1000,@,@,@"); 
+        list.push("P1-Villa-37,@Gajendra Sharma,@1000,@1000,@,@"); 
         list.push("P1-Villa-38,@ManishaSingh,@Vacant,@,@,@"); 
         list.push("P1-Villa-39,@Manish Salvi,@1000,@,@,@"); 
         list.push("P1-Villa-40,@Anita Kanwar,@Vacant,@,@,@"); 
