--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 									<!--<li><a href="COVID19.html">COVID - 19</a></li>-->
 									<li><a href="OwnersRentDetails.html">Owners\Tenants Details</a></li>
 									 <li><a href="MonthlyActivityFund.html">Society Activity Fund</a></li>
-									<!--For Now <li><a href="MonthlyMaintenance.html">Monthly Maintenance</a></li>-->
+									 <li><a href="MonthlyMaintenance.html">Monthly Maintenance</a></li>
 									<li><a href="MonthlyCreditDebit.html">Collection\Expenditure</a></li>
 									<!--<li><a href="OtherActivity.html">Other Activity</a></li>-->
 									<!--For Now <li><a href="MeetingHistory.html">Meeting History</a></li>-->
@@ -475,7 +475,7 @@
 				</div>
 			</div>
 			<div class="footer_bottom">
-				<p>Copyright@2022-23 <a href="#">Shubh Villa Phase I Owners</a> All Rights Reserved</p>
+				<p>Copyright@2023-24 <a href="#">Shubh Villa Phase I Owners</a> All Rights Reserved</p>
 			</div>
 		</footer>
 	</div>
