--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 									 <li><a href="MonthlyActivityFund.html">Society Activity Fund</a></li>
 									 <li><a href="MonthlyMaintenance.html">Monthly Maintenance</a></li>
 									<li><a href="MonthlyCreditDebit.html">Collection\Expenditure</a></li>
+									<li><a href="SocityVillaArea.html">Socity Villa Area</a></li>
 									<!--<li><a href="OtherActivity.html">Other Activity</a></li>-->
 									<!--For Now <li><a href="MeetingHistory.html">Meeting History</a></li>-->
 									<!--<li><a href="VisitorDetails.html">Visitor Details</a></li>-->
