--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -168,12 +168,12 @@
      list.push("P1-Villa-01,Pooja Sharma,,,,,,,,,,"); 
         list.push("P1-Villa-04,Bhupesh Saini,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-05,Shishir Maltiyar,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-06,Hemant Kumar,,,,,,,,,"); 
+        list.push("P1-Villa-06,Hemant Kumar,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-07,Rahul Pandey,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-08,Anil Sharma,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-09,Raghvendra Sharma,,,,,,,,,"); 
         list.push("P1-Villa-10,Jogendra Sachdeva,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-11,Sundeep Mahala,,,,,,,,,"); 
+        list.push("P1-Villa-11,Sundeep Mahala,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-12,Gaurav Kothari,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-13,Anil Sharma,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-14,Ayush   Shandilya,,,,,,,,,"); 
@@ -234,7 +234,7 @@
         list.push("P1-Villa-68,Shrish Jaiman,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-69,Piyush Sharma,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-70,Vineet Sharma,,,,,,,,,"); 
-        list.push("P1-Villa-71,Suresh kumar Sharma,,,,,,,,,"); 
+        list.push("P1-Villa-71,Suresh kumar Sharma,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-72,Nikesh Chaudhary,,,,,,,,,"); 
         list.push("P1-Villa-73,Richa Sharma,,,,,,,,,"); 
         list.push("P1-Villa-74,Praveen Kumar Prajapat,,,,,,,,,"); 
