--- a/MonthlyCreditDebit.html
+++ b/MonthlyCreditDebit.html
@@ -172,7 +172,7 @@
          // Sr. No,	Collection/Expenditure Details,	From,	Amount,	Credit/Debit
         list.push("P1 Previous balance,Villa 65,35190,C");
         list.push("P1 Quarterly Collection ,Villa 65,1000,C");
-       // list.push("P1 Chola Kulche MG,Villa 65,-500,D");
+        list.push("P1 Advisor charges decided in 7 april meeting,Villa 65,-1100,D");
         
          generateTable(list)
          SetBalanceColor();
