--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -171,7 +171,7 @@
         list.push("P1-Villa-06,Hemant Kumar,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-07,Rahul Pandey,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-08,Anil Sharma,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-09,Raghvendra Sharma,,,,,,,,,"); 
+        list.push("P1-Villa-09,Raghvendra Sharma,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-10,Jogendra Sachdeva,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-11,Sundeep Mahala,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-12,Gaurav Kothari,2000,2000,2000,,,,,,"); 
@@ -249,8 +249,8 @@
         list.push("P1-Villa-83,Tarun Sharda,,,,,,,,,"); 
         list.push("P1-Villa-84,Tarun Sharda,,,,,,,,,"); 
         list.push("P1-Villa-85,Pradeep Verma,,,,,,,,,"); 
-        list.push("P1-Villa-86,Surendra Agrawal,,,,,,,,,"); 
-        list.push("P1-Villa-87,Devendra Singh,,,,,,,,,"); 
+        list.push("P1-Villa-86,Surendra Agrawal,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-87,Devendra Singh,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-88,Pankaj Chauhan & Pushpa Tomar,,,,,,,,,"); 
         list.push("P1-Villa-89,Khem Chand Nagal,,,,,,,,,"); 
         list.push("P1-Villa-90,Vivek Dubey,,,,,,,,,"); 
