--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -263,15 +263,15 @@
         list.push("P1-Villa-97,Surendra Kumawat,,,,,,,,,"); 
         list.push("P1-Villa-98,Hitesh Jain,,,,,,,,,"); 
         list.push("P1-Villa-99,Sakshi Singh,,,,,,,,,"); 
-        list.push("P1-Villa-100,Akansha Garg,,,,,,,,,"); 
+        list.push("P1-Villa-100,Akansha Garg,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-101,Laxmi Agarwal,,,,,,,,,"); 
         list.push("P1-Villa-102,Pratima Singh,,,,,,,,,"); 
         list.push("P1-Villa-103,Vandana Soni,,,,,,,,,"); 
-        list.push("P1-Villa-104,Rajender Singh,,,,,,,,,"); 
+        list.push("P1-Villa-104,Rajender Singh,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-105,Vandana Soni,,,,,,,,,"); 
         list.push("P1-Villa-106,Vandana Soni,,,,,,,,,"); 
         list.push("P1-Villa-107,Rita Soni,,,,,,,,,"); 
-        list.push("P1-Villa-108,Shanky Munjal,,,,,,,,,"); 
+        list.push("P1-Villa-108,Shanky Munjal,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-109,Satish Kumar,,,,,,,,,"); 
         list.push("P1-Villa-110,Deepika Sharma,,,,,,,,,"); 
         list.push("P1-Villa-111,Rajat Kumar Sharma,,,,,,,,,"); 
