--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -211,7 +211,7 @@
         list.push("P1-Villa-46,Vikas Mahala,2000,0,0,,,,,,"); 
         list.push("P1-Villa-47,Manoj Ji,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-48,R C Sharma ,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-49,Sunita Verma,,,,,,,,,"); 
+        list.push("P1-Villa-49,Sunita Verma,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-50,Abhishek Garg,,,,,,,,,"); 
         list.push("P1-Villa-51,Jatin Kumar,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-52,Shailesh Bansal,2000,2000,2000,,,,,,"); 
@@ -248,7 +248,7 @@
         list.push("P1-Villa-82,Swati Bansal,,,,,,,,,"); 
         list.push("P1-Villa-83,Tarun Sharda,,,,,,,,,"); 
         list.push("P1-Villa-84,Tarun Sharda,,,,,,,,,"); 
-        list.push("P1-Villa-85,Pradeep Verma,,,,,,,,,"); 
+        list.push("P1-Villa-85,Pradeep Verma,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-86,Surendra Agrawal,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-87,Devendra Singh,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-88,Pankaj Chauhan & Pushpa Tomar,,,,,,,,,"); 
