--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -203,7 +203,7 @@
         list.push("P1-Villa-38,ManishaSingh,,,,,,,,,"); 
         list.push("P1-Villa-39,Manish Salvi,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-40,Anita Kanwar,,,,,,,,,"); 
-        list.push("P1-Villa-41,Monika Mittal,,,,,,,,,"); 
+        list.push("P1-Villa-41,Monika Mittal,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-42,Prakash Gaur,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-43,Arun Tripathi,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-44,Ravindra Verma,2000,2000,2000,,,,,,"); 
@@ -217,7 +217,7 @@
         list.push("P1-Villa-52,Shailesh Bansal,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-53,Rohit Jain,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-54,Vinod Kumar Garg,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-55,Raj Kamal,,,,,,,,,"); 
+        list.push("P1-Villa-55,Raj Kamal,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-56_57A,Kajor Mal Goyal,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-58_57B,Deepak Swaroop Garg,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-59,Kamal Preet Singh Narula,,,,,,,,,"); 
