--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -176,7 +176,7 @@
         list.push("P1-Villa-11,Sundeep Mahala,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-12,Gaurav Kothari,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-13,Anil Sharma,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-14,Ayush   Shandilya,,,,,,,,,"); 
+        list.push("P1-Villa-14,Ayush   Shandilya,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-15,Sunil   Kumar,,,,,,,,,"); 
         list.push("P1-Villa-16,Preeti Meena,,,,,,,,,"); 
         list.push("P1-Villa-17,khushi Khandelwal,2000,2000,2000,,,,,,"); 
