--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -265,7 +265,7 @@
         list.push("P1-Villa-99,Sakshi Singh,,,,,,,,,"); 
         list.push("P1-Villa-100,Akansha Garg,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-101,Laxmi Agarwal,,,,,,,,,"); 
-        list.push("P1-Villa-102,Pratima Singh,,,,,,,,,"); 
+        list.push("P1-Villa-102,Pratima Singh,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-103,Vandana Soni,,,,,,,,,"); 
         list.push("P1-Villa-104,Rajender Singh,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-105,Vandana Soni,,,,,,,,,"); 
