--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -226,7 +226,7 @@
 
 
         list.push("P1-Villa-62,Lal Singh,,,,,,,,,"); 
-        list.push("P1-Villa-63,Yogesh Ji,,,,,,,,,"); 
+        list.push("P1-Villa-63,Yogesh Ji,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-64,Sahil Meghnani,2000,2000,2000,,,,,,");
         list.push("P1-Villa-65,Jalaj Rajpurohit,2000,2000,2000,,,,,,");
         list.push("P1-Villa-66,Manju Gehlot,,,,,,,,,");
@@ -245,7 +245,7 @@
         list.push("P1-Villa-79,Rahul Peswani,,,,,,,,,"); 
         list.push("P1-Villa-80,Rahul Peswani,,,,,,,,,"); 
         list.push("P1-Villa-81,Mamta Sharma,,,,,,,,,"); 
-        list.push("P1-Villa-82,Swati Bansal,,,,,,,,,"); 
+        list.push("P1-Villa-82,Swati Bansal,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-83,Tarun Sharda,,,,,,,,,"); 
         list.push("P1-Villa-84,Tarun Sharda,,,,,,,,,"); 
         list.push("P1-Villa-85,Pradeep Verma,2000,2000,2000,,,,,,"); 
@@ -259,16 +259,16 @@
         list.push("P1-Villa-93,Manju Sexena,,,,,,,,,"); 
         list.push("P1-Villa-94,Rounak Rajendra Bhatt,,,,,,,,,"); 
         list.push("P1-Villa-95,Deepti Sharma,,,,,,,,,"); 
-        list.push("P1-Villa-96,George Pal Singh,,,,,,,,,"); 
+        list.push("P1-Villa-96,George Pal Singh,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-97,Surendra Kumawat,,,,,,,,,"); 
-        list.push("P1-Villa-98,Hitesh Jain,,,,,,,,,"); 
-        list.push("P1-Villa-99,Sakshi Singh,,,,,,,,,"); 
+        list.push("P1-Villa-98,Hitesh Jain,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-99,Sakshi Singh,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-100,Akansha Garg,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-101,Laxmi Agarwal,,,,,,,,,"); 
         list.push("P1-Villa-102,Pratima Singh,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-103,Vandana Soni,,,,,,,,,"); 
         list.push("P1-Villa-104,Rajender Singh,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-105,Vandana Soni,,,,,,,,,"); 
+        list.push("P1-Villa-105,Vandana Soni,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-106,Vandana Soni,,,,,,,,,"); 
         list.push("P1-Villa-107,Rita Soni,,,,,,,,,"); 
         list.push("P1-Villa-108,Shanky Munjal,2000,2000,2000,,,,,,"); 
