--- a/OwnersRentDetails.html
+++ b/OwnersRentDetails.html
@@ -197,7 +197,7 @@
         list.push("P1-Villa-67,@Abhishek Jaiman,@9414054353,@4,@Owner"); 
         list.push("P1-Villa-68,@Shrish Jaiman,@9887629361,@4,@Owner"); 
         list.push("P1-Villa-69,@Piyush Sharma,@9828487854,@5,@Owner"); 
-        list.push("P1-Villa-70,@Vineet Sharma,@7014547926,@3,@Owner"); 
+        list.push("P1-Villa-70,@Vineet Mahera,@7014547926,@3,@Owner"); 
         list.push("P1-Villa-71,@Suresh kumar Sharma,@8875115223,@3,@Owner"); 
         list.push("P1-Villa-72,@Nikesh Chaudhary,@9828030761,@3,@Owner"); 
         list.push("P1-Villa-73,@Richa Sharma,@9811547001,@7,@Owner"); 
