--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -177,13 +177,13 @@
         list.push("P1-Villa-12,Gaurav Kothari,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-13,Anil Sharma,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-14,Ayush   Shandilya,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-15,Sunil   Kumar,,,,,,,,,"); 
-        list.push("P1-Villa-16,Preeti Meena,,,,,,,,,"); 
+        list.push("P1-Villa-15,Sunil   Kumar,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-16,Preeti Meena,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-17,khushi Khandelwal,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-18,Pooja   Saxena,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-19,Hitesh Sain,,,,,,,,,"); 
         list.push("P1-Villa-20,Ved Prakash Parashar,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-21,Dariya Singh,,,,,,,,,"); 
+        list.push("P1-Villa-21,Dariya Singh,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-22,Shivani sanjeev sharma,,,,,,,,,"); 
         list.push("P1-Villa-23,Akshay Saraswat,,,,,,,,,"); 
         list.push("P1-Villa-24,Abhimanyu Saraswat,2000,2000,2000,,,,,,"); 
@@ -193,7 +193,7 @@
         list.push("P1-Villa-28,Mohit Juneja,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-29,Lokshita Mathur,,,,,,,,,"); 
         list.push("P1-Villa-30,Peeyush Mathur,,,,,,,,,"); 
-        list.push("P1-Villa-31,Mahesh Taparia,,,,,,,,,"); 
+        list.push("P1-Villa-31,Mahesh Taparia,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-32,Peeyush Verma,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-33,Prakash Joshi,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-34,Vijay Meena,2000,2000,2000,,,,,,"); 
@@ -233,7 +233,7 @@
         list.push("P1-Villa-67,Abhishek Jaiman,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-68,Shrish Jaiman,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-69,Piyush Sharma,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-70,Vineet Sharma,,,,,,,,,"); 
+        list.push("P1-Villa-70,Vineet Mahera,2000,,,,,,,,"); 
         list.push("P1-Villa-71,Suresh kumar Sharma,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-72,Nikesh Chaudhary,,,,,,,,,"); 
         list.push("P1-Villa-73,Richa Sharma,,,,,,,,,"); 
