--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -212,7 +212,7 @@
         list.push("P1-Villa-47,Manoj Ji,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-48,R C Sharma ,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-49,Sunita Verma,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-50,Abhishek Garg,,,,,,,,,"); 
+        list.push("P1-Villa-50,Abhishek Garg,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-51,Jatin Kumar,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-52,Shailesh Bansal,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-53,Rohit Jain,2000,2000,2000,,,,,,"); 
