--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -235,7 +235,7 @@
         list.push("P1-Villa-69,Piyush Sharma,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-70,Vineet Mahera,2000,,,,,,,,"); 
         list.push("P1-Villa-71,Suresh kumar Sharma,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-72,Nikesh Chaudhary,,,,,,,,,"); 
+        list.push("P1-Villa-72,Nikesh Chaudhary,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-73,Richa Sharma,,,,,,,,,"); 
         list.push("P1-Villa-74,Praveen Kumar Prajapat,,,,,,,,,"); 
         list.push("P1-Villa-75,Archna Goswami,2000,2000,2000,,,,,,"); 
@@ -251,7 +251,7 @@
         list.push("P1-Villa-85,Pradeep Verma,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-86,Surendra Agrawal,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-87,Devendra Singh,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-88,Pankaj Chauhan & Pushpa Tomar,,,,,,,,,"); 
+        list.push("P1-Villa-88,Pankaj Chauhan & Pushpa Tomar,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-89,Khem Chand Nagal,,,,,,,,,"); 
         list.push("P1-Villa-90,Vivek Dubey,,,,,,,,,"); 
         list.push("P1-Villa-91,Rajendra Prasad Gupta,,,,,,,,,"); 
