--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
 <img class="NO-CACHE" data-src="img/Poshbada_1.jpg" width="250px" heigt="250px" alt="" style="margin-bottom: 22px;">
 -->
-<img class="NO-CACHE" data-src="img/SVCert.png" width="250px" heigt="250px" alt="" style="margin-bottom: 22px;">
+<img class="NO-CACHE" data-src="img/SVCert.jpg" width="250px" heigt="250px" alt="" style="margin-bottom: 22px;">
 
     <!--
    <marquee behavior="slide" direction="left">
