--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -181,7 +181,7 @@
         list.push("P1-Villa-16,Preeti Meena,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-17,khushi Khandelwal,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-18,Pooja   Saxena,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-19,Hitesh Sain,,,,,,,,,"); 
+        list.push("P1-Villa-19,Hitesh Sain,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-20,Ved Prakash Parashar,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-21,Dariya Singh,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-22,Shivani sanjeev sharma,,,,,,,,,"); 
