--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -244,7 +244,7 @@
         list.push("P1-Villa-78,Akshat Mangal,,,,,,,,,"); 
         list.push("P1-Villa-79,Rahul Peswani,,,,,,,,,"); 
         list.push("P1-Villa-80,Rahul Peswani,,,,,,,,,"); 
-        list.push("P1-Villa-81,Mamta Sharma,,,,,,,,,"); 
+        list.push("P1-Villa-81,Mamta Sharma,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-82,Swati Bansal,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-83,Tarun Sharda,,,,,,,,,"); 
         list.push("P1-Villa-84,Tarun Sharda,,,,,,,,,"); 
