--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -240,7 +240,7 @@
         list.push("P1-Villa-74,Praveen Kumar Prajapat,,,,,,,,,"); 
         list.push("P1-Villa-75,Archna Goswami,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-76,Surya Nagal,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-77,Devki Nandan Mathuriya,,,,,,,,,"); 
+        list.push("P1-Villa-77,Devki Nandan Mathuriya,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-78,Akshat Mangal,,,,,,,,,"); 
         list.push("P1-Villa-79,Rahul Peswani,,,,,,,,,"); 
         list.push("P1-Villa-80,Rahul Peswani,,,,,,,,,"); 
