--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -222,7 +222,7 @@
         list.push("P1-Villa-58_57B,Deepak Swaroop Garg,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-59,Kamal Preet Singh Narula,,,,,,,,,"); 
         list.push("P1-Villa-60,Santra Devi,,,,,,,,,"); 
-        list.push("P1-Villa-61,Divanshi Dhanjani,,,,,,,,,"); 
+        list.push("P1-Villa-61,Divanshi Dhanjani,2000,2000,2000,,,,,,"); 
 
 
         list.push("P1-Villa-62,Lal Singh,,,,,,,,,"); 
