--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -200,7 +200,7 @@
         list.push("P1-Villa-35,D V Saraswat & Kusum Saraswat,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-36,Harish Kumar Yadav,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-37,Gajendra Sharma,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-38,ManishaSingh,,,,,,,,,"); 
+        list.push("P1-Villa-38,ManishaSingh,2000,0,0,,,,,,"); 
         list.push("P1-Villa-39,Manish Salvi,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-40,Anita Kanwar,,,,,,,,,"); 
         list.push("P1-Villa-41,Monika Mittal,2000,2000,2000,,,,,,"); 
