--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -165,7 +165,7 @@
       function getYear2024(){
      var list = [];
 
-     list.push("P1-Villa-01,Pooja Sharma,,,,,,,,,,"); 
+     list.push("P1-Villa-01,Pooja Sharma,2000,2000,0,,,,,,,"); 
         list.push("P1-Villa-04,Bhupesh Saini,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-05,Shishir Maltiyar,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-06,Hemant Kumar,2000,2000,2000,,,,,,"); 
@@ -233,7 +233,7 @@
         list.push("P1-Villa-67,Abhishek Jaiman,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-68,Shrish Jaiman,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-69,Piyush Sharma,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-70,Vineet Mahera,2000,,,,,,,,"); 
+        list.push("P1-Villa-70,Vineet Mahera,2000,0,0,,,,,,"); 
         list.push("P1-Villa-71,Suresh kumar Sharma,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-72,Nikesh Chaudhary,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-73,Richa Sharma,,,,,,,,,"); 
