--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -70,8 +70,8 @@
                 <h4 style="color:darkgreen">  Final Balance = <span id="TotalCollection"></span> </h4>
                 <br>
 				
-
-                <!--<h4 style="color:darkgreen">  Account: ########### , IFSC Code: $$$$$$$$$$ </h4>-->
+                <h4 style="color:darkgreen">  Society Account Details </h4>
+                <h4 style="color:darkgreen">  Account: 7774871568 , IFSC Code: idib000n163 </h4>
                 <!--<h4 style="color:darkgreen">  Cash / Online Amount to Pankaj Ji (Mobile No. 9929199901) Shubh Villa </h4>-->
                 <!--
                 <h4 style="color:darkgreen">  Cash only at Villa No. 10 </h4>
