--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -66,9 +66,9 @@
             <form id="contact" action="" method="post">
                 <h3 style="color:darkgreen"> Quarterly Society Activity Fund  </h3>
                 <br>
-                <!--<h4 style="color:darkgreen">  Society Account Details </h4>
-                <h4 style="color:darkgreen">  Account: ########### , IFSC Code: $$$$$$$$$$ </h4>-->
-                <h4 style="color:darkgreen"> Quarterly Amount Collection 1000, Cash at [ Villa No. 65 ] \ Online at 9820684534 </h4>
+                <h4 style="color:darkgreen">  Society Account Details </h4>
+                <h4 style="color:darkgreen">  Account: 7777694878 , IFSC Code: idib000n163 </h4>
+                <h4 style="color:darkgreen"> Quarterly Amount Collection 1000 </h4>
                 
                 <br>
                 <h4 style="color:darkgreen">  Final Balance = <span id="TotalCollection"></span> </h4>
