--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -202,7 +202,7 @@
         list.push("P1-Villa-37,Gajendra Sharma,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-38,ManishaSingh,2000,0,0,,,,,,"); 
         list.push("P1-Villa-39,Manish Salvi,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-40,Anita Kanwar,,,,,,,,,"); 
+        list.push("P1-Villa-40,Anita Kanwar,0,2000,2000,,,,,,"); 
         list.push("P1-Villa-41,Monika Mittal,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-42,Prakash Gaur,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-43,Arun Tripathi,2000,2000,2000,,,,,,"); 
@@ -236,7 +236,7 @@
         list.push("P1-Villa-70,Vineet Mahera,2000,0,0,,,,,,"); 
         list.push("P1-Villa-71,Suresh kumar Sharma,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-72,Nikesh Chaudhary,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-73,Richa Sharma,,,,,,,,,"); 
+        list.push("P1-Villa-73,Richa Sharma,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-74,Praveen Kumar Prajapat,,,,,,,,,"); 
         list.push("P1-Villa-75,Archna Goswami,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-76,Surya Nagal,2000,2000,2000,,,,,,"); 
