--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
 	<p> Upcoming Event: Poshbada.... 21-Jan-2024 </p>
 </marquee>
 
-<img class="NO-CACHE" data-src="img/Poshbada_1.jpg" width="250px" heigt="250px" alt="" style="margin-bottom: 22px;">
 -->
+<img class="NO-CACHE" data-src="img/SM.png" width="450px" heigt="150px" alt="" style="margin-bottom: 22px;">
 <img class="NO-CACHE" data-src="img/SVCert.png" width="250px" heigt="250px" alt="" style="margin-bottom: 22px;">
 
     <!--
