--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@
 </marquee>
 
 -->
+<a href="MemberShip.html"> <img src="img/ms.png" width=”200″ height=”80″ style="margin-bottom: 22px;"> </a>
+
 <img class="NO-CACHE" data-src="img/SM.png" width="405px" heigt="350px" alt="" style="margin-bottom: 22px;">
 <img class="NO-CACHE" data-src="img/SVCert.png" width="250px" heigt="250px" alt="" style="margin-bottom: 22px;">
 
