--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
 -->
 
-<a href="MemberShip.html"> <img  src="img/MS.png" width=”100px″ height=”50px″ style="margin-bottom: 22px;"> </a>
+<a href="MemberShip.html"> <img  src="img/MS.png" width="300px" heigt="100px" alt="" style="margin-bottom: 22px;"> </a>
 
 <img class="NO-CACHE" data-src="img/SM.png" width="405px" heigt="350px" alt="" style="margin-bottom: 22px;">
 <img class="NO-CACHE" data-src="img/SVCert.png" width="250px" heigt="250px" alt="" style="margin-bottom: 22px;">
