--- a/MemberShip.html
+++ b/MemberShip.html
@@ -253,7 +253,7 @@ function generateTable(list){
 	$(list).each(function(){
 		var val = this.split(",");
 	//	var tr="<tr><td>"+count+" </td><td>"+val[0]+"</td><td>"+val[1]+"</td><td>"+val[2]+"</td><td>"+val[3]+"</td><td>"+val[4]+"</td><td>"+val[5]+"</td><td>"+val[6]+"</td><td>"+val[7]+"</td><td>"+val[8]+"</td><td>"+val[9]+"</td><td>"+val[10]+"</td><td>"+val[11]+"</td><td>"+val[12]+"</td><td>"+val[13]+"</td></tr>";
-    var tr="<tr><td>"+count+" </td><td>"+val[0]+"</td><td>"+val[1]+"</td><td>"+val[2]+"</td><td></tr>";
+    var tr="<tr><td>"+count+" </td><td>"+val[0]+"</td><td>"+val[1]+"</td><td>"+val[2]+"</td></tr>";
 		$("#displayTableDetails").append(tr);
 		count++;
 	});
@@ -291,11 +291,11 @@ $(document).ready(function(){
 
         for (var i = 0; i < cells.length; i++) {
             if (cells[i].innerHTML !== "") {
-                if (cells[i].innerHTML.match(numberPattern)) {
+                if (cells[i].innerHTML== 'Done') {
                 cells[i].style.backgroundColor = "lightgreen";
                 sumVal = sumVal + parseInt(cells[i].innerHTML)
                 }
-                if (cells[i].innerHTML == '0') {
+                if (cells[i].innerHTML == 'Pending') {
                 cells[i].style.backgroundColor = "pink";
                 
                 }
